# KConfLLMRepair

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  TODO.md  activate.sh  agent_response.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  docker.yml  docker.yml.disabled  integration.yml  integration.yml.disabled  unit.yml  unit.yml.disabled
data/base/: base.config  samples.csv
data/baselines/: summary.csv
scripts/: baseline_runner.py  build-kernel.sh  build_syzkaller_img.sh  create-base.sh  create_base.sh  gen_base_config.sh  generate_base_config.sh  generate_baselines.py  generate_repairs.py  generate_samples.py  kernel.py  patchgen.sh  qemu-test.sh  rand-config.sh  repair.py  run-klocalizer-constraints.sh  run-klocalizer-patch.sh  run-klocalizer.sh  runner.py  setup.sh  syz-kconf.sh
scripts/utils/: fetch_code_changes.py  klocalizer_repair.py  qemu_test.py  test.py
src/: config.py
src/agent/: __init__.py  model.py  prompt.py  rag.py  search.py  session.py  tools.py
src/agents/: __init__.py  agent.py  context.py  executor.py  factory.py  prompts.py  rag.py  tools.py
src/cli/: experiment.py  generate_samples.py  naive.py  repair.py  repair_samples.py  sample.py
src/commands/: __init__.py  analyze.py  collect.py  utils.py
src/core/: __init__.py  agent.py  engine.py  kernel.py  pipeline.py
src/embeddings/: __init__.py  base.py  google.py
src/experiment/: __init__.py  gdrive.py  metrics.py  sample.py
src/kernel/: __init__.py  boot.py  builder.py  diffconfig.py  kconfig.py  patches.py  (+3 more)
tests/: conftest.py
(+125 files in other folders)
